[package]
name = "sd-card-party"
version = "0.1.0"
authors = ["Christoffer Anselm <c.anselm@paindevs.com>", "Clara Scherer <git20357@s.cherer.de>", "Fabian Hinderer <uypcr@student.kit.edu"]

[dependencies]
cortex-m = "0.1.4"
r0 = "0.1.0"
clippy = "0.0.121"

[dependencies.stm32f7_discovery]
git = "https://github.com/embed-rs/stm32f7-discovery.git"
version = "0.1.0"

[profile.release]
lto = true
